# GBLessons

./: README.md
Blackjack/: Blackjack.cpp  Blackjack.sln  Blackjack.vcxproj
GB_L-2-3-3/: GB_L-2-3-3.cpp  GB_L-2-3-3.sln  GB_L-2-3-3.vcxproj  GB_L-2-3-3.vcxproj.filters
GB_L-2-3-4/: GB_L-2-3-4.cpp  GB_L-2-3-4.sln  GB_L-2-3-4.vcxproj  GB_L-2-3-4.vcxproj.filters
GB_L-2-4-1/: GB_L-2-4-1.sln  GB_L-2-4-1.vcxproj  GB_L-2-4-1.vcxproj.filters  Header.h
GB_L-2-4-1.1/: GB_L-2-4-1.1.cpp  GB_L-2-4-1.1.sln  GB_L-2-4-1.1.vcxproj  GB_L-2-4-1.1.vcxproj.filters
GB_L-2-4-2/: GB_L-2-4-2.sln  GB_L-2-4-2.vcxproj  GB_L-2-4-2.vcxproj.filters
GB_L-2-4-2.1/: GB_L-2-4-2.1.cpp  GB_L-2-4-2.1.sln  GB_L-2-4-2.1.vcxproj  GB_L-2-4-2.1.vcxproj.filters
GB_L-2-4-3/: GB_L-2-4-3.sln  GB_L-2-4-3.vcxproj  GB_L-2-4-3.vcxproj.filters
GB_L-2-4-3.1/: GB_L-2-4-3.1.cpp  GB_L-2-4-3.1.sln  GB_L-2-4-3.1.vcxproj  GB_L-2-4-3.1.vcxproj.filters
GB_L-2-5-1/: GB_L-2-5-1.cpp  GB_L-2-5-1.sln  GB_L-2-5-1.vcxproj  GB_L-2-5-1.vcxproj.filters
GB_L-2-5-2/: GB_L-2-5-2.cpp  GB_L-2-5-2.sln  GB_L-2-5-2.vcxproj  GB_L-2-5-2.vcxproj.filters
GB_L-2-5-3/: GB_L-2-5-3.cpp  GB_L-2-5-3.sln  GB_L-2-5-3.vcxproj  GB_L-2-5-3.vcxproj.filters
GB_L-2-5-4/: GB_L-2-5-4.sln  GB_L-2-5-4.vcxproj  GB_L-2-5-4.vcxproj.filters
GB_L-2-6-1/: GB_L-2-6-1.cpp  GB_L-2-6-1.sln  GB_L-2-6-1.vcxproj  GB_L-2-6-1.vcxproj.filters
GB_L-2-6-2/: GB_L-2-6-2.cpp  GB_L-2-6-2.sln  GB_L-2-6-2.vcxproj  GB_L-2-6-2.vcxproj.filters
GB_L-2-6-3/: GB_L-2-6-3.sln  GB_L-2-6-3.vcxproj  GB_L-2-6-3.vcxproj.filters
GB_L-2-6-4/: GB_L-2-6-4.sln  GB_L-2-6-4.vcxproj  GB_L-2-6-4.vcxproj.filters
GB_L-2-7-1/: GB_L-2-7-1.cpp  GB_L-2-7-1.sln  GB_L-2-7-1.vcxproj  GB_L-2-7-1.vcxproj.filters
GB_L-2-7-2/: GB_L-2-7-2.cpp  GB_L-2-7-2.sln  GB_L-2-7-2.vcxproj  (+1 more)
GB_L-3-7-1/: CMakeLists.txt  GB_L-3-7-1.cpp  GB_L-3-7-1.h  protocol.proto
GB_L-3-7-1/protobuf/: protocol.pb.cc  protocol.pb.h
(+71 files in other folders)
