# CMakeList.txt : CMake project for GB_L-3-7-1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("GB_L-3-7-1")

# Add source to this project's executable.
add_executable (GB_L-3-7-1 "GB_L-3-7-1.cpp" "GB_L-3-7-1.h")

# TODO: Add tests and install targets if needed.
